<resources>
    <string name="app_name">MoniApp</string>
    <string name="txtNombreTutor">Nombre del Tutor</string>
    <string name="txtHorarios">Horarios:</string>
    <string name="btnSolicitarClase">Solicitar</string>
    <string name="txtNombreClase">Nombre</string>
    <string name="txtDia">Día de la semana:</string>
    <string name="txtHoraInicio">Hora de inicio</string>
    <string name="txtHoraFin">Hora de fin</string>
    <string name="btnHoraInicio">+</string>
    <string name="btnHoraFin">+</string>
    <string name="btnRegistrarClase">AGREGAR</string>
    <string name="txtRegistrarHorario">AGREGAR UN HORARIO</string>
    <string name="btnTutor">Soy tutor</string>
    <string name="btnEstudiante">Soy estudiante</string>
    <string name="txtAsignaturas">ASIGNATURAS</string>
    <string name="txtTutoresDisponibles">TUTORES DISPONIBLES: </string>
    <string name="txtRegistrarClase">AGREGA UNA CLASE</string>
    <string name="txtTitutoTutor">MIS CLASES</string>
    <string name="txtNombreClasePorTutor">Nombre de la clase</string>
    <string name="txtDisponible">Disponible</string>
    <string name="txtNoDisponible">No disponible</string>

    <string name="txtIniciar">Iniciar</string>
    <string name="txtUsuario">Usuario</string>
    <string name="txtContraseña">Contraseña</string>
    <string name="txtIniciarInivitado">Iniciar como invitado</string>
    <string name="btnLogin">Ingresar</string>



    <string-array name="opcionesTutor">
        <item>Mis clases</item>
        <item>Mis horarios</item>
    </string-array>
    <string name="title_activity_login">Iniciar sesión</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
