<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F8FFF"
    tools:context=".activities.ActivityRegistroClase">

    <TextView
        android:id="@+id/txtAgregarClase"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:text="@string/txtRegistrarClase"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtNombreClase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/fondo_txt_registro"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtNombreClase"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAgregarClase"
        app:layout_constraintVertical_bias="0.363" />

    <Button
        android:id="@+id/btnAgregarClase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rectangulo_btn"
        android:onClick="btnRegistrarClase"
        android:text="@string/btnRegistrarClase"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreClase"
        app:layout_constraintVertical_bias="0.203" />


</android.support.constraint.ConstraintLayout>